isar_plus/test/errors/index/property_does_not_exist.dart
// property does not exist

import 'package:isar_plus/isar_plus.dart';

@collection
class Model {
  late int id;

  @Index(composite: ['myProp'])
  int? value;
}
